Added rake tasks for easier development
`rake submodule:add` will now correctly add a submodule to your deployed
site
`rake submodule:sync` will ensure the deployed site submodules are
loaded
`rake server` will ensure that any necessary dependencies for local
development are set up prior to running the Jekyll server

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,6 @@ deploy
 
 # ignore the build directory (no need to commit this separate from deploy)
 build
+
+# ignore any vendor modules in source; these need to be in the deploy directory directly
+source/vendor
